cluster/apps/dashy/dashy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  labels:
    app.kubernetes.io/name: dashy
  annotations:
    configmap.reloader.stakater.com/reload: "dashy-config"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: dashy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dashy
    spec:
      containers:
        - name: dashy
          image: ghcr.io/lissy93/dashy:4.7.17
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            exec:
              command:
                - yarn
                - health-check
            failureThreshold: 3
            timeoutSeconds: 10
            periodSeconds: 90
            initialDelaySeconds: 40
          livenessProbe:
            exec:
              command:
                - yarn
                - health-check
            failureThreshold: 3
            timeoutSeconds: 10
            periodSeconds: 90
          readinessProbe:
            httpGet:
              port: 8080
            failureThreshold: 3
            timeoutSeconds: 10
            periodSeconds: 90
          volumeMounts:
            - mountPath: /app/user-data/conf.yml
              name: dashy-config
              subPath: conf.yml
          resources:
            requests:
              memory: 384Mi
              cpu: 20m
            limits:
              memory: 3072Mi
              cpu: 2000m
      volumes:
        - name: dashy-config
          configMap:
            name: dashy-config
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  labels:
    app.kubernetes.io/name: dashy
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: dashy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  labels:
    app.kubernetes.io/name: dashy
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host k8s.devmem.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashy
                port:
                  number: 8080
  tls:
    - hosts:
        - *host
